# serializer version: 1
# name: test_filter_node_factory
  FilterNode(kwargs=FrozenDict({'n': 0}), inputs=(), name='foo', input_typings=(), output_typings=())
# ---
# name: test_filter_node_factory.1
  FilterNode(kwargs=FrozenDict({'n': 1}), inputs=(VideoStream(node=InputNode(kwargs=FrozenDict({}), inputs=(), filename='foo.mp4'), index=None, optional=False),), name='foo', input_typings=(<StreamType.video: 'video'>,), output_typings=())
# ---
# name: test_filter_node_factory.2
  FilterNode(kwargs=FrozenDict({'n': 2}), inputs=(VideoStream(node=InputNode(kwargs=FrozenDict({}), inputs=(), filename='foo.mp4'), index=None, optional=False), VideoStream(node=InputNode(kwargs=FrozenDict({}), inputs=(), filename='foo.mp4'), index=None, optional=False)), name='foo', input_typings=(<StreamType.video: 'video'>, <StreamType.video: 'video'>), output_typings=())
# ---
